--- a/css/index_style.css
+++ b/css/index_style.css
@@ -15,10 +15,16 @@ body
 }
 .logonav
 {
-      width:200px;
+      width:50%;
 }
 
-
+@media screen and (max-width:991px) 
+{
+      .logonav
+      {
+            width:150px;
+      }    
+}
 
 .layar
 {
